# figenv

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.rst  figenv.py  pyproject.toml  setup.cfg  test.py
.github/workflows/: publish.yml  tests.yml
docs/: conf.py  figenv.rst  index.rst  usage.rst
files/: test.json  test.yaml
