[tool.poetry]
name = "figenv"
version = "0.3.5"
description = "Metaclass for handling configuration class objects using environment variables"
readme = 'README.rst'
authors = ["Daniel Wallace <daniel@gtmanfred.com>"]
license = "APACHE-2.0"
homepage = "https://github.com/gtmanfred/figenv"
repository = "https://github.com/gtmanfred/figenv"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
pytest = "^6.0.0"
codecov = "^2.1.7"
black = "^19.10b0"

[tool.black]
line-length = 119
target-version = ['py36', 'py37', 'py38']
skip-string-normalization = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
log_cli_level = "critical"
junit_family = "xunit2"
testpaths = [
    "test.py"
]
norecursedirs = [
    ".git/",
    ".tox"
]

[tool.coverage.run]
branch = true
source = [
	"figenv"
]
omit = [
    ".tox/*",
    "tests/*",
    "setup.py"
]

[tool.coverage.report]
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
