[metadata]
name = figenv
description = Metaclass for handling configuration class objects using environment variables
long_description = file: README.rst
author = Daniel Wallace
author_email = daniel@gtmanfred.com
license = APACHE-2.0
home_page = https://github.com/gtmanfred/figenv
project_urls =
    repository = https://github.com/gtmanfred/figenv
classifiers =
    Development Status :: 4 - Beta
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules =
  figenv
setup_requires =
  setuptools_scm
python_requires = >=3.6

[options.extras_require]
tests =
    coverage
    codecov
    black
